# chat-llama

./: .gitignore  Cargo.toml  readme.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
frontend/src/components/: ChatMessages.svelte  Composer.svelte  Sidebar.svelte
frontend/src/lib/: fileUtils.js
src/: main.rs
